2004-03-20  Murray Cumming  <murrayc@murrayc.com>

	* ActionGroup::get_action(), Clipboard::get_owner(), 
	ComboBox::get_model(), Entry::get_layout(), get_completion(),
	EntryCompletion::get_model(), FileChooser::get_filter(), 
	IconInfo::get_builtin_pixbuf(), IconSource::get_pixbuf(), 
	Image::get_pixbuf(), get_animation(), Menu::get_accel_group(), 
	Scale::get_layout(), TreeModelFilter::get_model(),
	UIManager::get_accel_group(), get_action(), 
	Widget::drag_begin(): Use refreturn.
	* Entry::get_layout(), IconInfo::get_builtin_pixbuf(): 
	IconSource::get_pixbuf(), Image::get_pixbuf(), 
	Menu::get_accel_group(): Added const versions.
        (Thanks to Bryan Forbes for finding the missing refreturns.)

2004-03-18  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/icontheme.hg: Wrapped changed signal.

2004-03-14  Murray Cumming  <murrayc@murrayc.com>
      
	* gtk/src/bin.ccg remove(),
	  gtk/src/container.[hg|ccg]: If the child widget is managed, do 
	a reference on the child widget before removing it, so that it 
	is not destroyed, and is ready for a new container, just like 
	when it was first instantiated.

2004-03-14  Murray Cumming  <murrayc@murrayc.com>
      
	* demos/demowindow.cc: Do not use flockfile if we are using the SUN
 	compiler, even though it passes the configure test, because it does
 	not seem to work here.

2004-03-13  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/toolbar, treestore: Removed extra semicolon to remove
	g++ 3.4 warning.

2004-03-13  Murray Cumming  <murrayc@murrayc.com>

	* atk/src/hypertext.hg, 
	Removed extra semicolon to remove g++ 3.4 warning.	

2004-03-12  Cedric Gustin  <cedric.gustin@swing.be>
  
 	* README.win32: Updated file for upcoming gtkmm-2.4.  
 	* atk/src/action.hg, atk/src/component.hg, atk/src/object.hg,
 	gtk/gtkmm/accelmap.cc, gtk/gtkmm/accelmap.h,
 	gtk/gtkmm/comboboxtext.cc, gtk/gtkmm/comboboxtext.h,
 	gtk/src/main.ccg : Removed many #ifndef WIN32 as all methods are