@@ -44,7 +44,7 @@
 <para>What is gtkmm (Previously known as Gtk--)?</para>
 </question>
 <answer>
-<para>gtkmm is a C++ wrapper for GTK+. That is, it is a language binding that lets you use GTK+ from C++. This includes support for C++ features such as inheritance, polymorphism and other powerful techniques which C++ programmers expects to have at their disposal.</para>
+<para>gtkmm is a C++ wrapper for GTK+. That is, it is a language binding that lets you use GTK+ from C++. This includes support for C++ features such as inheritance, polymorphism and other powerful techniques which C++ programmers expect to have at their disposal.</para>
 </answer>
 </qandaentry>
 
@@ -79,7 +79,7 @@
 <question><para>Why use libsigc++? Why not just use the regular GTK+ signal functions?</para></question>
 <answer>
 <orderedlist>
-<listitem><para>GTK+ signals aren't typesafe, so the compiler can't tell you whether you're callback has the wrong number or type of arguments or return value.</para></listitem>
+<listitem><para>GTK+ signals aren't typesafe, so the compiler can't tell you whether your callback has the wrong number or type of arguments or return value.</para></listitem>
 <listitem><para>They can only be used with functions or static methods. With libsigc++ callbacks can also be instance methods, using the member data of a particular object. They can also be virtual methods which you could override in a derived class.</para></listitem>
 </orderedlist>
 </answer>
@@ -154,7 +154,7 @@ part of gcc) together with the GNU toolset (such as found on Linux and
 <para>How complete is it?</para>
 </question>
 <answer>
-<para>As of version 1.2.x, gtkmm handles most, if not all, of the functionality offered by the GTK+ 1.2.x series. This means that you should be able to do anything with gtkmm that's supported by GTK+. If something isn't covered then we want to know about it.</para>
+<para>gtkmm tries to offer all of the functionality offered by GTK+. This means that you should be able to do anything with gtkmm that's supported by GTK+, and do it more easily. If something isn't covered then we want to know about it.</para>
 </answer>
 </qandaentry>
 
@@ -176,8 +176,8 @@ part of gcc) together with the GNU toolset (such as found on Linux and
 possible. This might not be obvious at first because:
 <orderedlist>
 <listitem><para>gtkmm has Glib::ustring which has almost the same
-interface as std::string, because the C++ standard does not support
-UTF8-encoded strings.</para></listitem>
+interface as std::string.  This new type exists because the C++
+standard does not support UTF8-encoded strings.</para></listitem>
 <listitem><para>The gtkmm API uses types such as
 Glib::ListHandle&lt;int&gt; which can be assigned to almost any
 standard C++ container, such as std::list or std::vector. These
@@ -261,7 +261,7 @@ Some classes such as Gtk::TextBuffer have only an STL-style interface. This is b
 <para>No, gtkmm is a thin wrapper. People might be surprised at the large size of the gtkmm source tarball. The gtkmm tarball is large because
 <orderedlist>
 <listitem><para>It contains lots of generated HTML documentation - the reference documentation, the book, and this FAQ, for instance. It also contains the Docbook XML sources for that documentation.</para></listitem>
-<listitem><para>It contains the .hg/.ccg source files used to generate the .h/.cc C+++ source files, as well as those generated files.</para></listitem>
+<listitem><para>It contains the .hg/.ccg source files used to generate the .h/.cc C++ source files, as well as those generated files.</para></listitem>
 </orderedlist>
 We ship these generated files to reduce the dependencies needed to build gtkmm itself, to make your life easier.
 </para>
@@ -340,7 +340,7 @@ We ship these generated files to reduce the dependencies needed to build gtkmm i
 <para>How can I get the GTK+ object from a gtkmm object?</para>
 </question>
 <answer>
-<para>If you need some GTK+ functionality which is not supported through gtkmm, you can call <command>Gtk::Widget::gtkobj()</command> (<command>gobj()</command> in gtkmm2) which will return a pointer to the plain C GTK+ data structure. You can then operate directly on this C object as you would in any GTK+ program.</para> 
+<para>If you need some GTK+ functionality which is not supported through gtkmm, you can call <command>Gtk::Widget::gobj()</command> (<command>gtkobj()</command> in gtkmm version 1.x) which will return a pointer to the plain C GTK+ data structure. You can then operate directly on this C object as you would in any GTK+ program.</para> 
 </answer>
 </qandaentry>
 
