@@ -1,3 +1,12 @@
+2004-03-21 Elijah Newren  <bugsqueesher@yahoo.com>
+
+	* doc/FAQ/gtkmm-faq.xml: Updated to mention gtkmm2 more than gtkmm 1.2.
+
+2004-03-20  Murray Cumming  <murrayc@murrayc.com>
+
+	* demos/gtk-demo/demowindow.cc: Use sigc::ptr_fun() instead of giving
+	the set_select_function function pointer directly to connect.
+
 2004-03-20  Murray Cumming  <murrayc@murrayc.com>
 
 	* ActionGroup::get_action(), Clipboard::get_owner(), 
